# videt

./: .gitignore  README.md  justfile  pyproject.toml  requirements.txt  videt.py
tests/: audio.py  default.py  test_cli.py  test_ffmpeg.py  test_matching.py  video.py
videt_app/: __init__.py  cli.py  ffmpeg.py  matching.py  models.py  pipeline.py  transcription.py
videt_app/data/: __init__.py
